--- a/templates/includes/_head.html
+++ b/templates/includes/_head.html
@@ -36,9 +36,9 @@
         
     {% else %}
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}"/>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/chat-style.css') }}">
+        <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/chat-style.css') }}">
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-5.0.2-dist/css/bootstrap.min.css') }}">
-        <link rel="stylesheet" href="{{url_for('static', filename='css/flash_message-style.css')}}">
+        <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/flash_message-style.css')}}">
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/side_nav.css')}}"/>
         <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/header-style.css')}}" /> 
         
