--- a/templates/admin/card_add.html
+++ b/templates/admin/card_add.html
@@ -73,9 +73,42 @@
 </div>
 -->
 <section class="container">
-    <form action="{{ url_for('add_page') }}" method='post' enctype="multipart/form-data">
-        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "dark"}) }}
-    </form>
+    <form action="{{ url_for('add_page') }}" method='post' enctype="multipart/form-data" autocomplete="off">      
+        {{ form.csrf_token }}
+        <div>
+            {{ wtf.form_field(form.name) }}
+        </div>
+        <div>
+            <div class="autocomplete w-100">
+                {{ wtf.form_field(form.edition) }}
+            </div>
+        </div>
+        <div>
+            {{ wtf.form_field(form.creation_date) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.legality) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.rarity) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.price) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.file) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.type) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.ccm) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.submit) }}
+        </div>
 </section>
+
+
 
 {% include 'footer.html' %}
