--- a/templates/admin/card_update.html
+++ b/templates/admin/card_update.html
@@ -4,8 +4,45 @@
 <h1> Mise à jour de la carte : {{ card[0].name }} </h1>
 
 <div class="container">
-    <form action="{{url_for('update_page', id=card[0].id) }}" method="post" enctype="multipart/form-data">
-        {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "dark"}) }}
+    <form action="{{url_for('update_page', id=card[0].id) }}" method="post" enctype="multipart/form-data" autocomplete="off">
+       <!-- {{ wtf.quick_form(form, novalidate=True, button_map={"submit": "dark"}) }} -->   
+        {{ form.csrf_token }}
+        <div>
+            {{ wtf.form_field(form.name) }}
+        </div>
+        <div>
+            <div class="autocomplete w-100">
+                {{ wtf.form_field(form.edition) }}
+            </div>
+        </div>
+        <div>
+            {{ wtf.form_field(form.creation_date) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.legality) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.rarity) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.price) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.search) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.file) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.type) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.ccm) }}
+        </div>
+        <div>
+            {{ wtf.form_field(form.submit) }}
+        </div>
+    </section>
     </form>
 </div>
 
