--- a/templates/cards/cards.html
+++ b/templates/cards/cards.html
@@ -3,34 +3,34 @@
 
 <main>
 
-    {% include '_side_nav.html' %}
+    {% include 'includes/_side_nav.html' %}
     
     <section class="container text-center mb-3">
         <div id="TopIllus">
             <h1> Top des illustrations </h1>
             {% with tops = rating, mode = 1 %}
-                {% include '_top.html' %}
+                {% include 'cards/_top.html' %}
             {% endwith %}
         </div>
 
         <div id="TopIllusLeg">
             <h1> Top des illustrations Legacy </h1>
             {% with tops = rating_legacy, mode = 1 %}
-                {% include '_top.html' %}
+                {% include 'cards/_top.html' %}
             {% endwith %}
         </div>
 
         <div id="TopIllusModern">
         <h1> Top des illustrations Modern </h1>
         {% with tops = rating_modern, mode = 1 %}
-            {% include '_top.html' %}
+            {% include 'cards/_top.html' %}
         {% endwith %}
         </div>
 
         <div id="TopIllusStd">
             <h1> Top des illustrations Standard </h1>
             {% with tops = rating_standard, mode = 1 %}
-                {% include '_top.html' %}
+                {% include 'cards/_top.html' %}
             {% endwith %}
         </div>
 
@@ -39,28 +39,28 @@
         <div id="TopSearch">
             <h1> Top des Recherches </h1>
             {% with tops = search, mode = 2 %}
-                {% include '_top.html' %}
+                {% include 'cards/_top.html' %}
             {% endwith %}
         </div>
 
         <div id="TopSearchLeg">
             <h1> Top des Recherches Legacy </h1>
             {% with tops = search_legacy, mode = 2  %}
-                {% include '_top.html' %}
+                {% include 'cards/_top.html' %}
             {% endwith %}
         </div>
 
         <div id="TopSearchModern">
             <h1> Top des Recherches Modern </h1>
             {% with tops = search_modern, mode = 2  %}
-                {% include '_top.html' %}
+                {% include 'cards/_top.html' %}
             {% endwith %}
         </div>
 
         <div id="TopSearchStd">
             <h1> Top des Recherches Standard </h1>
             {% with tops = search_standard, mode = 2  %}
-                {% include '_top.html' %}
+                {% include 'cards/_top.html' %}
             {% endwith %}
         </div>
     </section>
