--- a/templates/chat/messenger.html
+++ b/templates/chat/messenger.html
@@ -2,6 +2,7 @@
 
 <body>
     <section class="list-group container mt-5">
+        <h1>Votre messagerie</h1>
         <div class="row">
             <div class="">
                 {% for message in messages : %}
