--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,11 +11,20 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="{{ url_for('static', filename='js/autocompletion.js') }}"></script>
+
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <script src="{{ url_for('static', filename='js/flash.js') }}"></script>
-  <script>autocomplete(document.getElementById("research"), cards);</script>
   <script>removeFlashes();</script>
+  
+  <script src="{{ url_for('static', filename='js/autocompletion_card.js') }}"></script>
+  <script>autocomplete_card(document.getElementById("research"), cards);</script>
+
+
+  {% if request.endpoint == 'add_page' or request.endpoint == 'update_page' or request.endpoint == 'add_to_sell' or request.endpoint == 'sell_list_page'%}
+    <script src="{{ url_for('static', filename='js/autocompletion_edition.js') }}"></script>  
+    <script>autocomplete_edition(document.getElementById("edition"), editions);</script>
+  {% endif %}
   
   </footer>
   {% endblock %}
