--- a/templates/includes/_side_nav.html
+++ b/templates/includes/_side_nav.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <nav id="mySidenav" class="sidenav">
-    <span id="btn-nav-close" href="javascript:void(0)" class="closebtn" onclick="closeNav()"><img src="{{url_for('static', filename='img/save_img/arrows_reverse.png')}}" style="" class="w-25" alt=""></span>
+    <span id="btn-nav-close" href="javascript:void(0)" class="closebtn" onclick="closeNav()"><img src="{{url_for('static', filename='img/save_img/arrows_reverse.png')}}" class="w-25" alt=""></span>
     {% if request.endpoint == "cards" %} 
         <a class="mt-5" href="#TopIllus">Illustrations</a>
         <ul>
